@@ -161,6 +161,8 @@ mle2 <- function(minuslogl,
   call$data <- eval.parent(call$data)
   call$upper <- eval.parent(call$upper)
   call$lower <- eval.parent(call$lower)
+  call$control$parscale <- eval.parent(call$control$parscale)
+  call$control$ndeps <- eval.parent(call$control$ndeps)
   ##   browser()
   if(!missing(start))
     if (!is.list(start)) {
@@ -209,6 +211,25 @@ mle2 <- function(minuslogl,
     stop("some named arguments in 'start' are not arguments to the specified log-likelihood function")
   ## if (named)
   start <- start[order(oo)]
+  ## rearrange lower/upper to same order as "start"
+  ## FIXME: use names to rearrange if present
+  fix_order <- function(c1,name,default=NULL) {
+      if (!is.null(c1)) {
+          if (length(c1)>1) {
+              if (is.null(names(c1))) {
+                warning(name," not named: rearranging to match 'start'")
+                oo2 <- oo
+              } else oo2 <- match(names(unlist(namedrop(c1))),names(fullcoef))
+              c1 <- c1[order(oo2)]
+          }
+      } else c1 <- default
+      c1
+  }
+  call$lower <- fix_order(call$lower,"lower bounds",-Inf)
+  call$upper <- fix_order(call$upper,"upper bounds",Inf)
+  call$control$parscale <- fix_order(call$control$parscale,"parscale")
+  call$control$ndeps <- fix_order(call$control$ndeps,"ndeps")
+  if (is.null(call$control)) call$control <- list()
   ## attach(data,warn.conflicts=FALSE)
   ## on.exit(detach(data))
   denv <- local(environment(),c(as.list(data),fdata,list(mleenvset=TRUE)))
@@ -283,10 +304,20 @@ mle2 <- function(minuslogl,
     ## browser()
   } else {
     oout <- switch(optimizer,
-                   optim = optim(par=start,
-                     fn=objectivefunction, method=method,
-                     hessian=!skip.hessian,
-                     gr=objectivefunctiongr, ...),
+                   optim = {
+                       arglist <- list(...)
+                       arglist$lower <- arglist$upper <-
+                         arglist$control <- NULL
+                       do.call("optim",
+                               c(list(par=start,
+                                      fn=objectivefunction, method=method,
+                                      hessian=!skip.hessian,
+                                      gr=objectivefunctiongr,
+                                      control=call$control,
+                                      lower=call$lower,
+                                      upper=call$upper),
+                                 arglist))
+                   },
                    nlm = nlm(f=objectivefunction, hessian=!skip.hessian, ...),
                    nlminb = nlminb(start=start,
                      objective=objectivefunction, hessian=NULL, ...),
@@ -501,20 +532,18 @@ setMethod("profile", "mle2",
             parscale <- eval.parent(call$control$parscale)
             upper <- eval.parent(call$upper)
             lower <- eval.parent(call$lower)
-            ## cat("upper\n")
-            ## print(upper)
+            cat("upper\n")
+            print(upper)
             for (i in which) {
               zi <- 0
               pvi <- pv0
               p.i <- Pnames[i]
               ## omit values from control vectors:
               ##   is this necessary/correct?
-              ## FIXME: if lower, upper are set then the profile should
-              ##    respect that!
-              if (!is.null(ndeps)) call$control$ndeps <- ndeps[-i]
-              if (!is.null(parscale)) call$control$parscale <- parscale[-i]
-              if (!is.null(upper)) call$upper <- upper[-i]
-              if (!is.null(lower)) call$lower <- lower[-i]
+               if (!is.null(ndeps)) call$control$ndeps <- ndeps[-i]
+               if (!is.null(parscale)) call$control$parscale <- parscale[-i]
+               if (!is.null(upper) && length(upper)>1) call$upper <- upper[-i]
+               if (!is.null(lower) && length(lower)>1) call$lower <- lower[-i]
               for (sgn in c(-1, 1)) {
                 if (trace) {
                     cat("\nParameter:", p.i, c("down", "up")[(sgn + 1)/2 + 1], "\n")
@@ -529,8 +558,10 @@ setMethod("profile", "mle2",
                 ## (We now have.)
                 call$start <- as.list(B0)
                 lastz <- 0
-                lbound <- if (!is.null(lower)) lower[i] else -Inf
-                ubound <- if (!is.null(upper)) upper[i] else Inf
+                lbound <- if (!is.null(lower) && length(lower)>1)
+                  lower[i] else -Inf
+                ubound <- if (!is.null(upper) && length(upper)>1)
+                  upper[i] else Inf
                 while ((step <- step + 1) < maxsteps && abs(z) < zmax) {
                   curval <- B0[i] + sgn * step * del * std.err[i]
                   if ((sgn==-1 & curval<lbound) ||
